--- a/package.json
+++ b/package.json
@@ -1,42 +1,44 @@
 {
-  "name": "capitall.ciderboi.xyz",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/server": "^11.11.0",
-    "@mantine/carousel": "^6.0.16",
-    "@mantine/core": "^6.0.16",
-    "@mantine/form": "^6.0.16",
-    "@mantine/hooks": "^6.0.16",
-    "@mantine/next": "^6.0.16",
-    "@tabler/icons-react": "^2.25.0",
-    "@tiptap/extension-link": "^2.0.3",
-    "@tiptap/react": "^2.0.3",
-    "@tiptap/starter-kit": "^2.0.3",
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "daisyui": "^3.2.1",
-    "dayjs": "^1.11.9",
-    "embla-carousel-react": "^8.0.0-rc11",
-    "lodash": "^4.17.21",
-    "next": "13.4.9",
-    "postcss": "^8.4.25",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-pdf": "^7.1.2",
-    "tailwindcss": "^3.3.2",
-    "typescript": "5.1.6"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.14.195"
-  }
+	"name": "capitall.ciderboi.xyz",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"prettier": "prettier --write ."
+	},
+	"dependencies": {
+		"@emotion/react": "^11.11.1",
+		"@emotion/server": "^11.11.0",
+		"@mantine/carousel": "^6.0.16",
+		"@mantine/core": "^6.0.16",
+		"@mantine/form": "^6.0.16",
+		"@mantine/hooks": "^6.0.16",
+		"@mantine/next": "^6.0.16",
+		"@tabler/icons-react": "^2.25.0",
+		"@tiptap/extension-link": "^2.0.3",
+		"@tiptap/react": "^2.0.3",
+		"@tiptap/starter-kit": "^2.0.3",
+		"@types/node": "20.4.2",
+		"@types/react": "18.2.14",
+		"@types/react-dom": "18.2.7",
+		"autoprefixer": "10.4.14",
+		"daisyui": "^3.2.1",
+		"dayjs": "^1.11.9",
+		"embla-carousel-react": "^8.0.0-rc11",
+		"lodash": "^4.17.21",
+		"next": "13.4.9",
+		"postcss": "^8.4.25",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-pdf": "^7.1.2",
+		"tailwindcss": "^3.3.2",
+		"typescript": "5.1.6"
+	},
+	"devDependencies": {
+		"@types/lodash": "^4.14.195",
+		"prettier": "^3.0.0"
+	}
 }
